# pcre2

./: .gitmodules  Cargo.toml  README.md  build.rs  udp.sh
src/: ffi.rs  main.rs  regex.rs
