[package]
name = "pcre2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.46"
thread_local = "1"
structopt = "0.3.26"
futures = "0.3.21"
tokio = { version = "1", features = ["full"]}

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
pkg-config = "0.3.13"